Adjust the text format in second section of the page

--- a/website/index.html
+++ b/website/index.html
@@ -81,11 +81,14 @@
     <div class="container">
         <div class="split-layout">
             <div class="split-text fade-in">
-                <div class="section-label">QUEM SOMOS</div>
-                <h2 class="section-title">
-                    A Shift nasceu com um propósito: <br>
-                    <span class="text-gradient">Transformar dados em <br>vantagem competitiva</span>
+                <div class="section-label-pink">QUEM SOMOS</div>
+                <h2 class="about-heading">
+                    A Shift nasceu com um propósito:
                 </h2>
+                <div class="about-hero-text">
+                    <span class="grad-blue">Transformar</span> <span class="grad-pink">dados em</span> <br>
+                    <span class="grad-pink">vantagem competitiva</span>
+                </div>
                 <div class="section-desc">
                     <p>
                         A Shift é uma startup <span class="text-gradient-pink">especializada em machine learning</span> que ajuda empresas a otimizar 
