Final changes in text format

--- a/website/index.html
+++ b/website/index.html
@@ -86,7 +86,7 @@
                     A Shift nasceu com um propósito:
                 </h2>
                 <div class="about-hero-text">
-                    <span class="grad-blue">Transformar</span> <span class="grad-pink">dados em</span> <br>
+                    <span class="grad-blue-pink">Transformar dados em</span> <br>
                     <span class="grad-pink">vantagem competitiva</span>
                 </div>
                 <div class="section-desc">
