Spinning Logo added to hero page

--- a/website/index.html
+++ b/website/index.html
@@ -43,7 +43,7 @@
 <!-- ═══════════════════════════════════════════════════════════════════ -->
 <section class="brand-header fade-in">
     <div class="container text-center">
-        <img src="assets/logo.png" alt="Shift Logo" class="brand-logo">
+        <video src="assets/logo.mp4" class="brand-logo" autoplay loop muted playsinline></video>
         <div class="brand-name">Shift</div>
     </div>
 </section>
