Remove video logo on mobile

--- a/website/index.html
+++ b/website/index.html
@@ -48,7 +48,8 @@
 <section class="slide hero-slide" data-theme="light">
     <div class="brand-header">
         <div class="container text-center slide-content">
-            <video src="assets/logo.mp4" class="brand-logo" autoplay loop muted playsinline preload="auto"></video>
+            <video src="assets/logo.mp4" class="brand-logo brand-logo-video" autoplay loop muted playsinline preload="auto"></video>
+            <img src="assets/logo.png" alt="Shift" class="brand-logo brand-logo-img-mobile">
             <div class="brand-name">Shift</div>
         </div>
     </div>
