Changes on effects and combining 2 slides of the page into one with case + metrics

--- a/website/index.html
+++ b/website/index.html
@@ -60,7 +60,7 @@
         <div class="hero-content slide-content">
             <h1 class="hero-title">
                 <span style="font-weight: 800;">Otimização de Estoque</span> <br>
-                <span style="font-weight: 400; color: #ffffff;">com Machine Learning</span>
+                <span style="font-weight: 400; color: #ffffff;">com </span><span class="typewriter-text" style="font-weight: 400; color: #ffffff;">Machine Learning</span>
             </h1>
 
             <p class="hero-subtitle">
@@ -81,6 +81,7 @@
 <!-- ABOUT SECTION (Quem Somos)                                         -->
 <!-- ═══════════════════════════════════════════════════════════════════ -->
 <section class="section section--dark slide" id="about" data-theme="dark">
+    <canvas id="network-canvas"></canvas>
     <div class="container slide-content">
         <div class="split-layout">
             <div class="split-text">
@@ -179,7 +180,7 @@
 </section>
 
 <!-- ═══════════════════════════════════════════════════════════════════ -->
-<!-- CASE STUDY (Estudo de Caso)                                        -->
+<!-- CASE STUDY + IMPACT (Combined Slide)                              -->
 <!-- ═══════════════════════════════════════════════════════════════════ -->
 <section class="section section--dark slide" id="case-study" data-theme="dark">
     <div class="container slide-content">
@@ -191,41 +192,6 @@
             Uma grande varejista de moda enfrentava um dilema crítico: <span class="text-gradient-pink">excesso recorrente de estoque em algumas regiões e rupturas em outras.</span>
             A empresa recorreu à Shift para transformar seu planejamento de estoque.
         </p>
-
-        <div class="case-grid">
-            <div class="case-card challenge-card">
-                <div class="case-header">
-                    <h3>Desafio</h3>
-                </div>
-                <ul class="case-list">
-                    <li>Milhões em capital de giro imobilizados em estoques de baixa rotatividade.</li>
-                    <li>O planejamento manual demorava meses para conseguir montar a nova coleção.</li>
-                    <li>Reposição muito acima da demanda real em diversas lojas.</li>
-                </ul>
-            </div>
-
-            <div class="case-card solution-card">
-                <div class="case-header">
-                    <h3>Solução</h3>
-                </div>
-                <ul class="case-list">
-                    <li>Implementamos previsão probabilística para quantificar a incerteza da demanda.</li>
-                    <li>Otimizamos os níveis de estoque por filial com base em metas de nível de serviço.</li>
-                    <li>Implantamos dashboards em tempo real para monitoramento contínuo.</li>
-                </ul>
-            </div>
-        </div>
-    </div>
-</section>
-
-<!-- ═══════════════════════════════════════════════════════════════════ -->
-<!-- IMPACT (Impacto)                                                   -->
-<!-- ═══════════════════════════════════════════════════════════════════ -->
-<section class="section section--dark slide" id="impact" data-theme="dark">
-    <div class="container slide-content">
-        <div class="section-header text-center">
-            <h2 class="section-title">Impacto</h2>
-        </div>
 
         <div class="impact-grid">
             <div class="impact-item">
@@ -343,9 +309,8 @@
     <button class="dot"></button>
     <button class="dot"></button>
     <button class="dot"></button>
-    <button class="dot"></button>
 </div>
 
-<script src="script.js"></script>
+<script src="script.js" defer></script>
 </body>
 </html>
